--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,3 +10,12 @@
     display: flex;
     align-items: center;
 }
+
+@layer base {
+    .link:hover {
+        color: #5fa8d3;
+        /* background-color: #cae9ff; */
+        /* font-size: large; */
+        font-weight: bold;
+    }
+}
